tests/ui/contracts/error/has-arguments.rs
use http_tracing_attributes::contracts;

#[contracts(a, b)]
fn f() {}

fn main() {}
